--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.1",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
